everything working. Will try update in the next commit

--- a/CoolBoardExemple/data/coolBoardConfig.json
+++ b/CoolBoardExemple/data/coolBoardConfig.json
@@ -1,10 +1,13 @@
 {
-	"delay":5000,
-	"answerJsonSize":2792,
-	"sensorJsonSize":300,
-	"ireneActive":1,
-	"jetpackActive":1,
-	"externalSensorsActive":1,
-	"serverTimeOut":180
+	"CoolBoard":
+	{
+		"delay":5000,
+		"answerJsonSize":2792,
+		"sensorJsonSize":300,
+		"ireneActive":1,
+		"jetpackActive":1,
+		"externalSensorsActive":1,
+		"serverTimeOut":180
+	}
 }
 
