--- a/CoolBoardExemple/data/coolBoardSensorsConfig.json
+++ b/CoolBoardExemple/data/coolBoardSensorsConfig.json
@@ -1,25 +1,28 @@
 {
-	"SENSOR_JSON_SIZE":284,
-
-	"BME280":
-	{ 
-		"temperature" : 1,
-		 "humidity":1,
-		 "pressure":1
-
-
-	},
-
-	"SI114X":
+	"CoolSensorsBoard":
 	{
-		 "visible":1,  
-		 "ir":1,
-		 "uv":1
-	},
+		"SENSOR_JSON_SIZE":284,
 
-	"vbat":1,
+		"BME280":
+		{ 
+			"temperature" : 1,
+			 "humidity":1,
+			 "pressure":1
 
-	"earthMoisture":1
+
+		},
+
+		"SI114X":
+		{
+			 "visible":1,  
+			 "ir":1,
+			 "uv":1
+		},
+
+		"vbat":1,
+
+		"earthMoisture":1
+	}
 
 }
 
