--- a/CoolBoardExemple/data/irene3000Config.json
+++ b/CoolBoardExemple/data/irene3000Config.json
@@ -1,24 +1,28 @@
 {
-	"ireneJsonSize":347,
-
-	"waterTemp":
+	"irene3000":
 	{
-		"active":1,
-		"gain":16
-	},
+		"ireneJsonSize":347,
 
-	"phProbe":
-	{
-		"active":1,
-		"gain":16
-	},
+		"waterTemp":
+		{
+			"active":1,
+			"gain":16
+		},
 
-	"adc2":
-	{
-		"active":1,
-		"gain":16,
-		"type":"voltage"
-	} 
+		"phProbe":
+		{
+			"active":1,
+			"gain":16
+		},
+
+		"adc2":
+		{
+			"active":1,
+			"gain":16,
+			"type":"voltage"
+		} 
+	}
+
 }
 
 
