--- a/CoolBoardExemple/data/mqttConfig.json
+++ b/CoolBoardExemple/data/mqttConfig.json
@@ -1,9 +1,12 @@
 {
-	"mqtt_server":"broker.mqtt-dashboard.com",
-	"inTopic":"inTopic",
-	"outTopic":"outTopic",
-	"clientId":"espAshiroji",
-	"bufferSize":2048
+	"mqtt":
+	{
+		"mqtt_server":"broker.mqtt-dashboard.com",
+		"inTopic":"inTopic",
+		"outTopic":"outTopic",
+		"clientId":"espAshiroji",
+		"bufferSize":3000
+	}
 }
 
 
