--- a/CoolBoardExemple/data/rtcConfig.json
+++ b/CoolBoardExemple/data/rtcConfig.json
@@ -1,6 +1,9 @@
 {
-	"timeZone": 1,
-	"timeServer":"132.163.4.101",
-	"localPort":8888
+	"rtc":
+	{
+		"timeZone": 1,
+		"timeServer":"132.163.4.101",
+		"localPort":8888
+	}
 }
 
