--- a/CoolBoardExemple/data/externalSensorsConfig.json
+++ b/CoolBoardExemple/data/externalSensorsConfig.json
@@ -1,16 +1,18 @@
 {
-	"sensorsNumber":1,
-
-	"jsonSize":283,
-	
-	"sensor0":
+	"externalSensors":
 	{
-		"reference":"NDIR_I2C",
-		"type":"CO2",
-		"connection":"I2C",
-		"dataSize":10,
-		"address":46
-	}
-	    
+		"sensorsNumber":1,
+
+		"jsonSize":283,
+	
+		"sensor0":
+		{
+			"reference":"NDIR_I2C",
+			"type":"CO2",
+			"connection":"I2C",
+			"dataSize":10,
+			"address":46
+		}
+	}    
 }
 
