update working, wrong json might throw something away , needs testing

--- a/CoolBoardExemple/data/mqttConfig.json
+++ b/CoolBoardExemple/data/mqttConfig.json
@@ -1,6 +1,6 @@
 
 {
-	"mqtt_server":"broker.mqtt-dashboard.com",
+	"mqttServer":"broker.mqtt-dashboard.com",
 	"inTopic":"inTopic",
 	"outTopic":"outTopic",
 	"clientId":"espAshiroji",
