--- a/CoolBoardExemple/data/coolBoardConfig.json
+++ b/CoolBoardExemple/data/coolBoardConfig.json
@@ -1,13 +1,16 @@
 
 {
-	"interval":5000,
+
+	"logInterval":5000,
 	"answerJsonSize":2792,
 	"sensorJsonSize":300,
-	"ireneActive":0,
-	"jetpackActive":0,
-	"externalSensorsActive":0,
+	"ireneActive":1,
+	"jetpackActive":1,
+	"externalSensorsActive":1,
 	"serverTimeOut":180,
-	"station":1
+	"sleepActive":1,
+	"userActive":1 
+
 }
 
 
