added temporal actors (needs testing) , add update msg answer (desired=null) ,still need to fix external sensors and jetpack config functions to not go exception(28)

--- a/CoolBoardExemple/data/jetPackConfig.json
+++ b/CoolBoardExemple/data/jetPackConfig.json
@@ -5,7 +5,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	},
 
 	"Act1":
@@ -13,7 +14,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	},
 
 	"Act2":
@@ -21,7 +23,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	},
 
 	"Act3":
@@ -37,7 +40,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	},
 
 	"Act5":
@@ -45,7 +49,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	},
 
 	"Act6":
@@ -53,7 +58,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	},
 
 	"Act7":
@@ -61,7 +67,8 @@
 		"actif":1,
 		"low":200,
 		"high":500,
-		"type":"temperature"
+		"type":"temperature",
+		"temporal":1
 	}
 }
 
