--- a/CoolBoardExemple/data/mqttConfig.json
+++ b/CoolBoardExemple/data/mqttConfig.json
@@ -3,7 +3,7 @@
 	"mqttServer":"broker.mqtt-dashboard.com",
 	"inTopic":"inTopic",
 	"outTopic":"outTopic",
-	"clientId":"espAshiroji",
+	"user":"espAshiroji",
 	"bufferSize":3000
 }
 
