--- a/CoolBoardExemple/data/mqttConfig.json
+++ b/CoolBoardExemple/data/mqttConfig.json
@@ -1,8 +1,8 @@
 
 {
-	"mqttServer":"my.mqtt-server.com",
-	"inTopic":"$aws/things/6001941D4CB4/shadow/update/delta",
-	"outTopic":"$aws/things/6001941D4CB4/shadow/update",
+	"mqttServer":"broker.mqtt-dashboard.com",
+	"inTopic":"inTopic",
+	"outTopic":"outTopic",
 	"user":"mehdi",
 	"bufferSize":3000
 }
