--- a/CoolBoardExemple/data/mqttConfig.json
+++ b/CoolBoardExemple/data/mqttConfig.json
@@ -1,8 +1,8 @@
 
 {
 	"mqttServer":"broker.mqtt-dashboard.com",
-	"inTopic":"inTopic",
-	"outTopic":"outTopic",
+	"inTopic":"$aws/things/6001941D4CB4/shadow/update/delta",
+	"outTopic":"$aws/things/6001941D4CB4/shadow/update",
 	"user":"mehdi",
 	"bufferSize":3000
 }
