updated json sizes , can't pass entire config json , partial update is ok

--- a/CoolBoardFarmExemple/data/mqttConfig.json
+++ b/CoolBoardFarmExemple/data/mqttConfig.json
@@ -3,7 +3,7 @@
 	"mqttServer":"broker.mqtt-dashboard.com",
 	"inTopic":"inTopic",
 	"outTopic":"outTopic",
-	"user":"espAshiroji",
+	"user":"mehdi",
 	"bufferSize":3000
 }
 
