--- a/CoolBoardStationExemple/data/mqttConfig.json
+++ b/CoolBoardStationExemple/data/mqttConfig.json
@@ -3,7 +3,7 @@
 	"mqttServer":"broker.mqtt-dashboard.com",
 	"inTopic":"inTopic",
 	"outTopic":"outTopic",
-	"user":"espAshiroji",
+	"user":"mehdi",
 	"bufferSize":3000
 }
 
