--- a/CoolBoardExemple/data/jetPackConfig.json
+++ b/CoolBoardExemple/data/jetPackConfig.json
@@ -1,10 +1,10 @@
 {
-	"ActorsNumber":8,
+	"ActorsNumber":3,
 	"Act0":
 	{
 		"actif":1,
-		"low":30,
-		"high":40,
+		"low":25,
+		"high":35,
 		"type":"temperature",
 		"temporal":0
 	},
@@ -12,19 +12,19 @@
 	"Act1":
 	{
 		"actif":1,
-		"low":200,
-		"high":500,
+		"low":2000,
+		"high":5000,
 		"type":"temperature",
 		"temporal":1
 	},
 
 	"Act2":
 	{
-		"actif":0,
-		"low":200,
-		"high":500,
-		"type":"temperature",
-		"temporal":0
+		"actif":1,
+		"low":7,
+		"high":8,
+		"type":"hour",
+		"temporal":1
 	},
 
 	"Act3":
