fixed hour formatting

--- a/CoolBoardExemple/data/wifiConfig.json
+++ b/CoolBoardExemple/data/wifiConfig.json
@@ -1,9 +1,4 @@
 {
-	"wifiCount":1,
-	"timeOut":300,
-	"Wifi0":
-	{
-		"ssid":"lapaillasse",
-		"pass":"biohacking"
-	}
+	"wifiCount":0,
+	"timeOut":300
 }
