--- a/CoolBoardStationExemple/data/mqttConfig.json
+++ b/CoolBoardStationExemple/data/mqttConfig.json
@@ -1,8 +1,5 @@
-
 {
-	"mqttServer":"broker.mqtt-dashboard.com",
-	"inTopic":"inTopic",
-	"outTopic":"outTopic",
+	"mqttServer":"my.mqtt-server.com",
 	"user":"mehdi",
 	"bufferSize":3000
 }
