--- a/CoolBoardExemple/data/jetPackConfig.json
+++ b/CoolBoardExemple/data/jetPackConfig.json
@@ -1,12 +1,13 @@
 {
-	"ActorsNumber":3,
+
 	"Act0":
 	{
 		"actif":1,
 		"low":25,
 		"high":35,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act1":
@@ -15,7 +16,8 @@
 		"low":2000,
 		"high":5000,
 		"type":"temperature",
-		"temporal":1
+		"temporal":1,
+		"inverted":0
 	},
 
 	"Act2":
@@ -24,7 +26,8 @@
 		"low":13,
 		"high":12,
 		"type":"hour",
-		"temporal":1
+		"temporal":1,
+		"inverted":0
 	},
 
 	"Act3":
@@ -33,7 +36,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act4":
@@ -42,7 +46,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act5":
@@ -51,7 +56,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act6":
@@ -60,7 +66,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act7":
@@ -69,7 +76,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	}
 }
 
