--- a/CoolBoardExemple/data/irene3000Config.json
+++ b/CoolBoardExemple/data/irene3000Config.json
@@ -3,14 +3,12 @@
 
 	"waterTemp":
 	{
-		"active":1,
-		"gain":8
+		"active":1
 	},
 
 	"phProbe":
 	{
-		"active":1,
-		"gain":4
+		"active":1
 	},
 
 	"adc2":
