updated json files in the exemples

--- a/CoolBoardFarmExemple/data/irene3000Config.json
+++ b/CoolBoardFarmExemple/data/irene3000Config.json
@@ -1,22 +1,18 @@
 {
-
-
 	"waterTemp":
 	{
-		"active":1,
-		"gain":16
+		"active":1
 	},
 
 	"phProbe":
 	{
-		"active":1,
-		"gain":16
+		"active":1
 	},
 
 	"adc2":
 	{
 		"active":1,
-		"gain":16,
+		"gain":1,
 		"type":"voltage"
 	} 
 }
