--- a/CoolBoardFarmExemple/data/externalSensorsConfig.json
+++ b/CoolBoardFarmExemple/data/externalSensorsConfig.json
@@ -3,9 +3,9 @@
 
 	"sensor0":
 	{
-		"reference":"NDIR_I2C",
-		"type":"CO2",
-		"address":77
+		"reference":"DallasTemperature",
+		"type":"TempOneWire"
+
 	}
 }    
 
