--- a/CoolBoardStationExemple/data/jetPackConfig.json
+++ b/CoolBoardStationExemple/data/jetPackConfig.json
@@ -1,29 +1,33 @@
 {
+
 	"Act0":
 	{
 		"actif":1,
-		"low":30,
-		"high":40,
+		"low":25,
+		"high":35,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act1":
 	{
 		"actif":1,
-		"low":200,
-		"high":500,
+		"low":2000,
+		"high":5000,
 		"type":"temperature",
-		"temporal":1
+		"temporal":1,
+		"inverted":0
 	},
 
 	"Act2":
 	{
-		"actif":0,
-		"low":200,
-		"high":500,
-		"type":"temperature",
-		"temporal":0
+		"actif":1,
+		"low":13,
+		"high":12,
+		"type":"hour",
+		"temporal":1,
+		"inverted":0
 	},
 
 	"Act3":
@@ -32,7 +36,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act4":
@@ -41,7 +46,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act5":
@@ -50,7 +56,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act6":
@@ -59,7 +66,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	},
 
 	"Act7":
@@ -68,7 +76,8 @@
 		"low":200,
 		"high":500,
 		"type":"temperature",
-		"temporal":0
+		"temporal":0,
+		"inverted":0
 	}
 }
 
