--- a/exemples/CoolBoardStationExemple/data/jetPackConfig.json
+++ b/exemples/CoolBoardStationExemple/data/jetPackConfig.json
@@ -3,20 +3,20 @@
 	{
 		"actif":1,
 		"inverted":0,
-		"temporal":1,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
-		"type":["temperature","hour"]
+		"temporal":0,
+		"low":[20,0,0,0],
+		"high":[30,0,0,0],
+		"type":["Temperature",""]
 	},
 
 	"Act1":
 	{
 		"actif":1,
-		"inverted":0,
-		"temporal":1,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
-		"type":["temperature","hour"]
+		"inverted":1,
+		"temporal":0,
+		"low":[20,5000,0,0],
+		"high":[30,2000,0,0],
+		"type":["Temperature",""]
 	},
 
 	"Act2":
@@ -24,9 +24,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
-		"type":["temperature","hour"]
+		"low":[20,3000,0,0],
+		"high":[30,5000,0,0],
+		"type":["Temperature",""]
 	},
 
 	"Act3":
@@ -34,9 +34,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
-		"type":["temperature","hour"]
+		"low":[20,0,13,0],
+		"high":[30,0,12,0],
+		"type":["Temperature","hour"]
 	},
 
 	"Act4":
@@ -44,9 +44,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
-		"type":["temperature","hour"]
+		"low":[20,5000,0,59],
+		"high":[30,2000,0,40],
+		"type":["temperature","minute"]
 	},
 
 	"Act5":
@@ -54,16 +54,16 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
-		"type":["temperature","hour"]
+		"low":[20,5000,13,55],
+		"high":[30,2000,12,45],
+		"type":["temperature","hourMinute"]
 	},
 
 	"Act6":
 	{
-		"actif":1,
+		"actif":0,
 		"inverted":0,
-		"temporal":1,
+		"temporal":0,
 		"low":[20,5000,18],
 		"high":[30,2000,17],
 		"type":["temperature","hour"]
@@ -71,9 +71,9 @@
 
 	"Act7":
 	{
-		"actif":1,
+		"actif":0,
 		"inverted":0,
-		"temporal":1,
+		"temporal":0,
 		"low":[20,5000,18],
 		"high":[30,2000,17],
 		"type":["temperature","hour"]
