General Modifications: 	-Corrected json files 	-DEBUG=0

--- a/exemples/CoolBoardExemple/data/externalSensorsConfig.json
+++ b/exemples/CoolBoardExemple/data/externalSensorsConfig.json
@@ -3,8 +3,9 @@
 
 	"sensor0":
 	{
-		"reference":"DallasTemperature",
-		"type":"TempOneWire"
+		"reference":"NDIR_I2C",
+		"type":"C02",
+		"address":77
 
 	}
 }    
