JetPack Modifications : 	-split the doAction metho 	-problems in hourAction (> , >= ) problem

--- a/exemples/CoolBoardExemple/data/jetPackConfig.json
+++ b/exemples/CoolBoardExemple/data/jetPackConfig.json
@@ -14,8 +14,8 @@
 		"actif":1,
 		"inverted":1,
 		"temporal":0,
-		"low":[20,5000,0,0],
-		"high":[30,2000,0,0],
+		"low":[20,0,0,0],
+		"high":[30,0,0,0],
 		"type":["Temperature",""]
 	},
 
@@ -24,9 +24,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,3000,0,0],
-		"high":[30,5000,0,0],
-		"type":["Temperature",""]
+		"low":[0,3000,0,0],
+		"high":[0,5000,0,0],
+		"type":["",""]
 	},
 
 	"Act3":
@@ -34,9 +34,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,0,13,0],
-		"high":[30,0,12,0],
-		"type":["Temperature","hour"]
+		"low":[20,3000,0,0],
+		"high":[40,5000,0,0],
+		"type":["Temperature",""]
 	},
 
 	"Act4":
@@ -44,9 +44,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,5000,0,59],
-		"high":[30,2000,0,40],
-		"type":["temperature","minute"]
+		"low":[0,000,16,0],
+		"high":[0,000,15,0],
+		"type":["","hour"]
 	},
 
 	"Act5":
@@ -54,9 +54,9 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,5000,13,55],
-		"high":[30,2000,12,45],
-		"type":["temperature","hourMinute"]
+		"low":[20,0,16,0],
+		"high":[40,0,15,0],
+		"type":["Temperature","hour"]
 	},
 
 	"Act6":
@@ -64,8 +64,8 @@
 		"actif":0,
 		"inverted":0,
 		"temporal":0,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
+		"low":[20,5000,18,0],
+		"high":[30,2000,17,0],
 		"type":["temperature","hour"]
 	},
 
@@ -74,8 +74,8 @@
 		"actif":0,
 		"inverted":0,
 		"temporal":0,
-		"low":[20,5000,18],
-		"high":[30,2000,17],
+		"low":[20,5000,18,0],
+		"high":[30,2000,17,0],
 		"type":["temperature","hour"]
 	}
 
