--- a/exemples/CoolBoardExemple/data/jetPackConfig.json
+++ b/exemples/CoolBoardExemple/data/jetPackConfig.json
@@ -44,8 +44,8 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[0,000,16,0],
-		"high":[0,000,15,0],
+		"low":[0,000,9,0],
+		"high":[0,000,7,0],
 		"type":["","hour"]
 	},
 
@@ -54,29 +54,29 @@
 		"actif":1,
 		"inverted":0,
 		"temporal":1,
-		"low":[20,0,16,0],
-		"high":[40,0,15,0],
+		"low":[20,0,9,0],
+		"high":[40,0,7,0],
 		"type":["Temperature","hour"]
 	},
 
 	"Act6":
 	{
-		"actif":0,
+		"actif":1,
 		"inverted":0,
-		"temporal":0,
-		"low":[20,5000,18,0],
-		"high":[30,2000,17,0],
-		"type":["temperature","hour"]
+		"temporal":1,
+		"low":[0,00,0,50],
+		"high":[0,00,0,1],
+		"type":["","minute"]
 	},
 
 	"Act7":
 	{
-		"actif":0,
+		"actif":1,
 		"inverted":0,
-		"temporal":0,
-		"low":[20,5000,18,0],
-		"high":[30,2000,17,0],
-		"type":["temperature","hour"]
+		"temporal":1,
+		"low":[20,00,0,50],
+		"high":[40,00,0,1],
+		"type":["Temperature","minute"]
 	}
 
 
