ExternalSensors : 	Added Support for the Adafruit TCS34725 ColorSensor

--- a/exemples/CoolBoardExemple/data/externalSensorsConfig.json
+++ b/exemples/CoolBoardExemple/data/externalSensorsConfig.json
@@ -3,9 +3,8 @@
 
 	"sensor0":
 	{
-		"reference":"NDIR_I2C",
-		"type":"C02",
-		"address":77
+		"reference":"Adafruit_TCS34725",
+		"type":"RGB"
 
 	}
 }    
