--- a/examples/CoolBoardExample/data/coolBoardConfig.json
+++ b/examples/CoolBoardExample/data/coolBoardConfig.json
@@ -7,8 +7,9 @@
 	"externalSensorsActive":0,
 	"sleepActive":0,
 	"manual":0,
-	"userActive":1 
-
+	"userActive":1,
+	"saveAsJSON":0,
+	"saveAsCSV":1
 }
 
 
