--- a/examples/Farm/data/jetPackConfig.json
+++ b/examples/Farm/data/jetPackConfig.json
@@ -1,6 +1,6 @@
 {
   "Act0": {
-    "actif": 0,
+    "actif": 1,
     "inverted": 0,
     "temporal": 0,
     "low": [
@@ -21,18 +21,18 @@
     ]
   },
   "Act1": {
-    "actif": 0,
-    "inverted": 0,
+    "actif": 1,
+    "inverted": 1,
     "temporal": 0,
     "low": [
       20,
-      0,
+      5000,
       0,
       0
     ],
     "high": [
       30,
-      0,
+      2000,
       0,
       0
     ],
@@ -42,87 +42,87 @@
     ]
   },
   "Act2": {
-    "actif": 0,
+    "actif": 1,
     "inverted": 0,
-    "temporal": 0,
+    "temporal": 1,
     "low": [
-      0,
+      20,
       3000,
       0,
       0
     ],
     "high": [
-      0,
+      30,
       5000,
       0,
       0
     ],
     "type": [
-      "",
+      "Temperature",
       ""
     ]
   },
   "Act3": {
-    "actif": 0,
+    "actif": 1,
     "inverted": 0,
-    "temporal": 0,
+    "temporal": 1,
     "low": [
       20,
-      3000,
       0,
+      13,
       0
     ],
     "high": [
-      40,
-      5000,
+      30,
       0,
+      12,
       0
     ],
     "type": [
       "Temperature",
-      ""
+      "hour"
     ]
   },
   "Act4": {
-    "actif": 0,
+    "actif": 1,
     "inverted": 0,
-    "temporal": 0,
+    "temporal": 1,
     "low": [
+      20,
+      5000,
       0,
-      0,
-      9,
-      0
+      59
     ],
     "high": [
+      30,
+      2000,
       0,
-      0,
-      7,
-      0
+      40
     ],
     "type": [
-      "",
-      "hour"
+      "temperature",
+      "minute"
     ]
   },
   "Act5": {
-    "actif": 0,
+    "actif": 1,
     "inverted": 0,
-    "temporal": 0,
+    "temporal": 1,
     "low": [
       20,
-      0,
-      9,
-      0
+      5000,
+      13,
+      55
     ],
     "high": [
-      40,
-      0,
-      7,
-      0
+      30,
+      2000,
+      12,
+      45
     ],
     "type": [
-      "Temperature",
-      "hour"
+      "temperature",
+      "hourMinute"
     ]
   },
   "Act6": {
@@ -130,20 +130,18 @@
     "inverted": 0,
     "temporal": 0,
     "low": [
-      0,
-      0,
-      0,
-      50
+      20,
+      5000,
+      18
     ],
     "high": [
-      0,
-      0,
-      0,
-      1
+      30,
+      2000,
+      17
     ],
     "type": [
-      "",
-      "minute"
+      "temperature",
+      "hour"
     ]
   },
   "Act7": {
@@ -152,19 +150,17 @@
     "temporal": 0,
     "low": [
       20,
-      0,
-      0,
-      50
+      5000,
+      18
     ],
     "high": [
-      40,
-      0,
-      0,
-      1
+      30,
+      2000,
+      17
     ],
     "type": [
-      "Temperature",
-      "minute"
+      "temperature",
+      "hour"
     ]
   }
 }
