--- a/examples/WeatherStation/data/irene3000Config.json
+++ b/examples/WeatherStation/data/irene3000Config.json
@@ -1,22 +1,13 @@
 {
-	"waterTemp":
-	{
-		"active":1
-	},
-
-	"phProbe":
-	{
-		"active":1
-	},
-
-	"adc2":
-	{
-		"active":1,
-		"gain":0.67,
-		"type":"waterLevel"
-	} 
+  "waterTemp": {
+    "active": 1
+  },
+  "phProbe": {
+    "active": 1
+  },
+  "adc2": {
+    "active": 1,
+    "gain": 0.67,
+    "type": "waterLevel"
+  }
 }
-
-
-
-
