--- a/examples/Station/data/coolBoardActorConfig.json
+++ b/examples/Station/data/coolBoardActorConfig.json
@@ -3,19 +3,19 @@
   "inverted": 0,
   "temporal": 0,
   "low": [
-    50,
+    20,
     0,
     0,
     0
   ],
   "high": [
-    40,
+    30,
     0,
     0,
     0
   ],
   "type": [
-    "soilMoisture",
+    "Temperature",
     ""
   ]
 }
