--- a/examples/Station/data/coolBoardConfig.json
+++ b/examples/Station/data/coolBoardConfig.json
@@ -1,10 +1,8 @@
 {
-  "logInterval": 3600,
+  "logInterval": 60,
   "ireneActive": 0,
   "jetpackActive": 0,
   "externalSensorsActive": 0,
   "sleepActive": 1,
-  "manual": 0,
-  "saveAsJSON": 1,
-  "saveAsCSV": 0
+  "manual": 0
 }
