--- a/examples/Station/data/irene3000Config.json
+++ b/examples/Station/data/irene3000Config.json
@@ -6,8 +6,8 @@
     "active": 1
   },
   "adc2": {
-    "active": 1,
-    "gain": 0.67,
-    "type": "waterLevel"
+    "active": 0,
+    "gain": 1,
+    "type": "voltage"
   }
 }
