--- a/examples/WeatherStation/data/coolBoardActorConfig.json
+++ b/examples/WeatherStation/data/coolBoardActorConfig.json
@@ -1,8 +1,21 @@
 {
-	"actif":0,
-	"inverted":0,
-	"temporal":0,
-	"low":[0,5000,0,0],
-	"high":[0,5000,0,0],
-	"type":["Temperature",""]
+  "actif": 0,
+  "inverted": 0,
+  "temporal": 0,
+  "low": [
+    0,
+    5000,
+    0,
+    0
+  ],
+  "high": [
+    0,
+    5000,
+    0,
+    0
+  ],
+  "type": [
+    "Temperature",
+    ""
+  ]
 }
