--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=CoolBoard
-version=1.0
-author=La Cool Co
-maintainer=La Cool Co <team@lacool.co>
-sentence=Library set to control La Cool Co's CoolBoard.
-paragraph=exposes all the used hardware components in a simple to use class.
+version=0.1
+author=La COOL Co
+maintainer=La COOL Co <team@lacool.co>
+sentence=Library providing control over La COOL Board.
+paragraph=This library manages hardware components used on La COOL Board in a simple to use class.
 category=Device Control
-url=https://bitbucket.org/lacoolco/coolboardapi/src
+url=https://github.com/LaCoolCo/LaCOOLBoard/
 architectures=*
