--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ sudo: false
 before_install:
   - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
 install:
-  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
-  - arduino --install-boards esp8266:esp8266
+  #  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
+  #  - arduino --install-boards esp8266:esp8266
   - arduino --install-library "ArduinoJson","NeoPixelBus by Makuna","SparkFun BME280","DallasTemperature","OneWire","Time"
 script:
   - arduino --verify --board esp8266:esp8266:generic:CpuFrequency=80,FlashFreq=40,FlashMode=dio,UploadSpeed=460800,FlashSize=2M,ResetMethod=ck,Debug=Disabled,DebugLevel=None____$PWD/examples/WeatherStation/WeatherStation.ino
