Fix Travis CI build
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - git clone https://github.com/etrombly/DS1337RTC
 - mv DS1337RTC /home/travis/arduino_ide/libraries/
 script:
-- arduino --verify --verbose --pref build.path=/home/travis/dist --boarg esp8266:esp8266:generic:CpuFrequency=80,FlashFreq=40,FlashMode=dio,UploadSpeed=460800,FlashSize=2M,ResetMethod=ck,Debug=Disabled,DebugLevel=None____
+- arduino --verify --verbose --pref build.path=/home/travis/dist --board esp8266:esp8266:generic:CpuFrequency=80,FlashFreq=40,FlashMode=dio,UploadSpeed=460800,FlashSize=2M,ResetMethod=ck,Debug=Disabled,DebugLevel=None____
   $PWD/examples/WeatherStation/WeatherStation.ino
 - mkdir -p /home/travis/dist
 - export RELEASE_VERSION=$(git describe --tags --always)
