Fix typo in Time git URL
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - arduino --install-library "SparkFun BME280":1.2.0
 - arduino --install-library "DallasTemperature":3.7.9
 - arduino --install-library "OneWire":2.3.4
-- git clone --branch 1.5 https://github.com/PaulStroffregen/Time
+- git clone --branch 1.5 https://github.com/PaulStoffregen/Time
 - mv Time /home/travis/arduino_ide/libraries
 - git clone https://github.com/etrombly/DS1337RTC
 - mv DS1337RTC /home/travis/arduino_ide/libraries/
