--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ install:
 - arduino --install-library "NeoPixelBus by Makuna":2.2.9
 - arduino --install-library "SparkFun BME280":1.2.0
 - arduino --install-library "DallasTemperature":3.7.9
+- arduino --install-library "PubSubClient":2.6.0
 - arduino --install-library "OneWire":2.3.4
 - git clone --branch v1.5 https://github.com/PaulStoffregen/Time
 - mv Time /home/travis/arduino_ide/libraries
-- git clone https://github.com/etrombly/DS1337RTC
+- git clone https://github.com/LaCoolCo/DS1337RTC
 - mv DS1337RTC /home/travis/arduino_ide/libraries/
 script:
 - arduino --verify --verbose --pref build.path=/home/travis/dist --board esp8266:esp8266:generic:CpuFrequency=80,FlashFreq=40,FlashMode=dio,UploadSpeed=115200,FlashSize=4M3M,ResetMethod=ck,Debug=Disabled,DebugLevel=None____
