Add different environments for logging levels
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
 script:
   - export RELEASE_VERSION=$(git describe --tags --always)
   - platformio run
-  - export FIRMWARE=.pioenvs/coolboard/LaCOOLBoard-${RELEASE_VERSION}.bin
-  - mv .pioenvs/coolboard/firmware.bin ${FIRMWARE}
+  - export FIRMWARE=.pioenvs/prod/LaCOOLBoard-${RELEASE_VERSION}.bin
+  - mv .pioenvs/prod/firmware.bin ${FIRMWARE}
 notifications:
   email:
     on_success: build@lacool.co
