Ram optimization, from 13kb free to average of  30kb/29kb. + OTA
Ram optimization, from 13kb free to average of  30kb/29kb.

--- a/examples/WeatherStation/data/wifiConfig.json
+++ b/examples/WeatherStation/data/wifiConfig.json
@@ -1,4 +1,12 @@
 {
-  "wifiCount": 0,
-  "timeOut": 180
+ "Wifi0": {
+  "pass": "KADDUPHONE",
+  "ssid": "KADDU"
+},
+  "Wifi1": {
+   "pass": "biohacking",
+   "ssid": "lapaillasse"
+ },
+ "wifiCount": 2,
+ "timeOut": 180
 }
