--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,10 @@ src_dir = examples/WeatherStation/
 lib_dir = src/
 
 [env:coolboard]
-build_flags = -Wl,-Tesp8266.flash.4m1m.ld
+build_flags = -Wl,-Teagle.flash.4m.ld, -DVTABLES_IN_FLASH -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 board = coolboard
 framework = arduino
-platform = espressif8266@1.6.0
+platform = espressif8266@1.7.0
 lib_deps =
   ArduinoJson@5.13.1
   NeoPixelBus@2.2.9
