Move all MQTT code to CoolBoard.cpp
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/examples/AutoSprinkle/data/coolBoardActorConfig.json
+++ b/examples/AutoSprinkle/data/coolBoardActorConfig.json
@@ -1,7 +1,7 @@
 {
-  "actif": 1,
-  "inverted": 0,
-  "temporal": 0,
+  "actif": true,
+  "inverted": false,
+  "temporal": false,
   "low": [
     50,
     0,
