--- a/examples/AutoSprinkle/data/coolBoardConfig.json
+++ b/examples/AutoSprinkle/data/coolBoardConfig.json
@@ -1,10 +1,9 @@
 {
   "logInterval": 3600,
-  "ireneActive": 0,
-  "jetpackActive": 0,
-  "externalSensorsActive": 0,
-  "sleepActive": 0,
-  "manual": 0,
-  "saveAsJSON": 1,
-  "saveAsCSV": 0
+  "ireneActive": false,
+  "jetpackActive": false,
+  "externalSensorsActive": false,
+  "sleepActive": false,
+  "manual": false,
+  "mqttServer": "mqtt.lacoolboard.io"
 }
