--- a/examples/Farm/data/coolBoardConfig.json
+++ b/examples/Farm/data/coolBoardConfig.json
@@ -1,8 +1,9 @@
 {
   "logInterval": 5,
-  "ireneActive": 0,
-  "jetpackActive": 1,
-  "externalSensorsActive": 0,
-  "sleepActive": 0,
-  "manual": 0
+  "ireneActive": false,
+  "jetpackActive": true,
+  "externalSensorsActive": false,
+  "sleepActive": false,
+  "manual": false,
+  "mqttServer": "mqtt.lacoolboard.io"
 }
