--- a/examples/Station/data/coolBoardConfig.json
+++ b/examples/Station/data/coolBoardConfig.json
@@ -1,8 +1,9 @@
 {
   "logInterval": 60,
-  "ireneActive": 0,
-  "jetpackActive": 0,
-  "externalSensorsActive": 0,
-  "sleepActive": 1,
-  "manual": 0
+  "ireneActive": false,
+  "jetpackActive": false,
+  "externalSensorsActive": false,
+  "sleepActive": true,
+  "manual": false,
+  "mqttServer": "mqtt.lacoolboard.io"
 }
