--- a/examples/WeatherStation/data/coolBoardActorConfig.json
+++ b/examples/WeatherStation/data/coolBoardActorConfig.json
@@ -1,7 +1,7 @@
 {
-  "actif": 0,
-  "inverted": 0,
-  "temporal": 0,
+  "actif": false,
+  "inverted": false,
+  "temporal": false,
   "low": [
     0,
     5000,
