--- a/examples/WeatherStation/data/coolBoardSensorsConfig.json
+++ b/examples/WeatherStation/data/coolBoardSensorsConfig.json
@@ -1,15 +1,15 @@
 {
   "BME280": {
-    "temperature": 1,
-    "humidity": 1,
-    "pressure": 1
+    "temperature": true,
+    "humidity": true,
+    "pressure": true
   },
   "SI114X": {
-    "visible": 1,
-    "ir": 1,
-    "uv": 1
+    "visible": true,
+    "ir": true,
+    "uv": true
   },
-  "vbat": 1,
-  "soilMoisture": 1,
-  "wallMoisture": 0
+  "vbat": true,
+  "soilMoisture": true,
+  "wallMoisture": false
 }
