--- a/examples/WeatherStation/data/irene3000Config.json
+++ b/examples/WeatherStation/data/irene3000Config.json
@@ -1,12 +1,12 @@
 {
   "waterTemp": {
-    "active": 1
+    "active": true
   },
   "phProbe": {
-    "active": 1
+    "active": true
   },
   "adc2": {
-    "active": 1,
+    "active": true,
     "gain": 0.67,
     "type": "waterLevel"
   }
