--- a/examples/WeatherStation/data/jetPackConfig.json
+++ b/examples/WeatherStation/data/jetPackConfig.json
@@ -1,8 +1,8 @@
 {
   "Act0": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       20,
       0,
@@ -21,9 +21,9 @@
     ]
   },
   "Act1": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       20,
       0,
@@ -42,9 +42,9 @@
     ]
   },
   "Act2": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       0,
       3000,
@@ -63,9 +63,9 @@
     ]
   },
   "Act3": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       20,
       3000,
@@ -84,9 +84,9 @@
     ]
   },
   "Act4": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       0,
       0,
@@ -105,9 +105,9 @@
     ]
   },
   "Act5": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       20,
       0,
@@ -126,9 +126,9 @@
     ]
   },
   "Act6": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       0,
       0,
@@ -147,9 +147,9 @@
     ]
   },
   "Act7": {
-    "actif": 0,
-    "inverted": 0,
-    "temporal": 0,
+    "actif": false,
+    "inverted": false,
+    "temporal": false,
     "low": [
       20,
       0,
