--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@
 data_dir = examples/WeatherStation/data
 src_dir = examples/WeatherStation/
 lib_dir = src/
-
 [common]
 board = coolboard
 framework = arduino
@@ -54,4 +53,9 @@ board = ${common.board}
 framework = ${common.framework}
 platform = ${common.platform}
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE
+build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE  -DDEBUG_ESP_SSL
+  -DDEBUG_ESP_TLS_MEM
+  -DDEBUG_ESP_HTTP_CLIENT
+  -DDEBUG_ESP_HTTP_SERVER
+
+
