Add firmware version to binary at compile time
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,8 +25,8 @@ lib_deps =
   DallasTemperature@3.8.0
   OneWire@2.3.4
   https://github.com/LaCoolCo/DS1337RTC
-build_flags = -Wl,-Tesp8266.flash.4m.ld -DVTABLES_IN_FLASH 
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
+build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m.ld -DVTABLES_IN_FLASH 
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY"
 
 [env:minified]
 board = ${common.board}
