--- a/platformio.ini
+++ b/platformio.ini
@@ -53,9 +53,5 @@ board = ${common.board}
 framework = ${common.framework}
 platform = ${common.platform}
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE  -DDEBUG_ESP_SSL
-  -DDEBUG_ESP_TLS_MEM
-  -DDEBUG_ESP_HTTP_CLIENT
-  -DDEBUG_ESP_HTTP_SERVER
-
+build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE
 
