--- a/examples/WeatherStation/data/coolBoardConfig.json
+++ b/examples/WeatherStation/data/coolBoardConfig.json
@@ -5,5 +5,5 @@
   "externalSensorsActive": false,
   "sleepActive": true,
   "manual": false,
-  "mqttServer": "aysjdb7c3zql8.iot.eu-west-1.amazonaws.com"
+  "mqttServer": "mqtts.lacoolboard.io"
 }
