--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ lib_deps =
   DallasTemperature@3.8.0
   OneWire@2.3.4
   https://github.com/LaCoolCo/DS1337RTC
-build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.2m.ld -DVTABLES_IN_FLASH
+build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
   -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY"
 
 [env:minified]
