--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 /.vscode/
 /.venv/
 /build/
+/src/readme.txt
+.DS_Store
 .pioenvs
 .piolibdeps
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
-/src/readme.txt
