Patch ESP8266 SDK to 2.5.0-dev (quick and dirty)
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,14 @@ python:
   - "2.7"
 
 sudo: false
-cache:
-  directories:
-    - "~/.platformio"
 
 install:
   - pip install -U platformio
   - platformio update
 
 script:
+  - platformio run -t clean
+  - patch/patch.sh
   - export RELEASE_VERSION=$(git describe --tags --always)
   - platformio run
   - export FIRMWARE=.pioenvs/prod/LaCOOLBoard-${RELEASE_VERSION}.bin
