--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+**/data/certificate.bin
+**/data/privateKey.bin
+/examples/**/*.cpp
