--- a/platformio.ini
+++ b/platformio.ini
@@ -54,11 +54,11 @@ board = ${common.board}
 framework = ${common.framework}
 platform = ${common.platform}
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE
+build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
 
 [env:trace]
 board = ${common.board}
 framework = ${common.framework}
 platform = ${common.platform}
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE
+build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
