--- a/examples/OneWire/data/externalSensorsConfig.json
+++ b/examples/OneWire/data/externalSensorsConfig.json
@@ -2,12 +2,12 @@
   "sensorsNumber": 2,
   "sensor0": {		
 	"reference":"DallasTemperature1",
-    "type":"waterTempDallas",
+    "type":"waterTempDallas1",
     "address":0	
   },
   "sensor1": {		
 	"reference":"DallasTemperature1",
-    "type":"waterTempDallas",
+    "type":"waterTempDallas2",
     "address":1		
   }
 }
