enhancement memory leak, new coolWiFi

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ lib_deps =
   https://github.com/me-no-dev/ESPAsyncWebServer
 
 build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY"
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DNDEBUG"
 
 [env:minified]
 board = ${common.board}
