Fixed webserver credential loaded from memory

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ lib_deps =
   https://github.com/me-no-dev/ESPAsyncWebServer
 
 build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DNDEBUG"
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DNDEBUG -DICACHE_FLASH -DASYNC_TCP_SSL_ENABLED=0"
 
 [env:minified]
 board = ${common.board}
@@ -57,7 +57,7 @@ board = ${common.board}
 framework = ${common.framework}
 platform = ${common.platform}
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE -DCOOL_WIFI_TRACE
 
 [env:trace]
 board = ${common.board}
