--- a/platformio.ini
+++ b/platformio.ini
@@ -26,8 +26,9 @@ lib_deps =
   https://github.com/cyberp/DS1337
   https://github.com/practicalarduino/SHT1x
   https://github.com/uChip/MCP342X.git
+  https://github.com/knolleary/pubsubclient
 build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY"
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=2048"
 
 [env:minified]
 board = ${common.board}
