various performance enhancement

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,9 +27,10 @@ lib_deps =
   https://github.com/practicalarduino/SHT1x
   https://github.com/me-no-dev/ESPAsyncTCP
   https://github.com/me-no-dev/ESPAsyncWebServer
+  https://github.com/knolleary/pubsubclient
 
 build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DNDEBUG -DICACHE_FLASH -DASYNC_TCP_SSL_ENABLED=0"
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DNDEBUG -DICACHE_FLASH -DMQTT_MAX_PACKET_SIZE=3072 -DESP8266=1"
 
 [env:minified]
 board = ${common.board}
