Debug refactor json + asyncWebserver test

--- a/examples/DFrobotEC/data/coolBoardConfig.json
+++ b/examples/DFrobotEC/data/coolBoardConfig.json
@@ -1,10 +1,9 @@
 {
   "logInterval": 3600,
-  "ireneActive": false,
+  "ireneActive": true,
   "jetpackActive": false,
   "externalSensorsActive": false,
-  "sleepActive": false,
+  "sleepActive": true,
   "manual": false,
-  "webServer": false,
   "mqttServer": "mqtts.lacoolboard.io"
 }
