--- a/examples/MCP3424_4-20mA/data/coolBoardConfig.json
+++ b/examples/MCP3424_4-20mA/data/coolBoardConfig.json
@@ -2,9 +2,8 @@
   "logInterval": 3600,
   "ireneActive": false,
   "jetpackActive": false,
-  "externalSensorsActive": false,
-  "sleepActive": false,
+  "externalSensorsActive": true,
+  "sleepActive": true,
   "manual": false,
-  "webServer": false,
   "mqttServer": "mqtts.lacoolboard.io"
 }
