--- a/examples/WeatherStation/data/wifiConfig.json
+++ b/examples/WeatherStation/data/wifiConfig.json
@@ -1,4 +1,29 @@
 {
-  "wifiCount": 0,
+  "Wifi0": {
+    "pass": "rorificum22-perissem@!-lapicid-inanis",
+    "ssid": "Freebox-A79397",
+    "bssid": "E4:9E:12:EA:B5:24",
+    "secure": "4",
+    "hidden": "false"
+  },
+  "Wifi1": {
+    "pass": "biohacking",
+    "ssid": "LaPaillasse"
+  },
+
+  "Wifi2": {
+    "pass": "RKB1RK0TOR",
+    "ssid": "FASTWEB-1-zbx7yXSzO6ZE"
+  },
+  "Wifi3": {
+    "pass": "gnamgnam2",
+    "ssid": "Bar Roma",
+    "bssid": "C4:0B:CB:2A:C3:C6",
+    "channel": "6",
+    "secure": "4",
+    "hidden": "false"
+  },
+  "wifiCount": 4,
+  "nomad": false,
   "timeOut": 180
 }
