--- a/examples/WeatherStation/data/coolBoardActorConfig.json
+++ b/examples/WeatherStation/data/coolBoardActorConfig.json
@@ -2,20 +2,7 @@
   "actif": false,
   "inverted": false,
   "temporal": false,
-  "low": [
-    0,
-    5000,
-    0,
-    0
-  ],
-  "high": [
-    0,
-    5000,
-    0,
-    0
-  ],
-  "type": [
-    "Temperature",
-    ""
-  ]
+  "low": [0, 5000, 0, 0],
+  "high": [0, 5000, 0, 0],
+  "type": ["Temperature", ""]
 }
