--- a/examples/WeatherStation/data/jetPackConfig.json
+++ b/examples/WeatherStation/data/jetPackConfig.json
@@ -3,168 +3,64 @@
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      20,
-      0,
-      0,
-      0
-    ],
-    "high": [
-      30,
-      0,
-      0,
-      0
-    ],
-    "type": [
-      "Temperature",
-      ""
-    ]
+    "low": [20, 0, 0, 0],
+    "high": [30, 0, 0, 0],
+    "type": ["Temperature", ""]
   },
   "Act1": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      20,
-      0,
-      0,
-      0
-    ],
-    "high": [
-      30,
-      0,
-      0,
-      0
-    ],
-    "type": [
-      "Temperature",
-      ""
-    ]
+    "low": [20, 0, 0, 0],
+    "high": [30, 0, 0, 0],
+    "type": ["Temperature", ""]
   },
   "Act2": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      0,
-      3000,
-      0,
-      0
-    ],
-    "high": [
-      0,
-      5000,
-      0,
-      0
-    ],
-    "type": [
-      "",
-      ""
-    ]
+    "low": [0, 3000, 0, 0],
+    "high": [0, 5000, 0, 0],
+    "type": ["", ""]
   },
   "Act3": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      20,
-      3000,
-      0,
-      0
-    ],
-    "high": [
-      40,
-      5000,
-      0,
-      0
-    ],
-    "type": [
-      "Temperature",
-      ""
-    ]
+    "low": [20, 3000, 0, 0],
+    "high": [40, 5000, 0, 0],
+    "type": ["Temperature", ""]
   },
   "Act4": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      0,
-      0,
-      9,
-      0
-    ],
-    "high": [
-      0,
-      0,
-      7,
-      0
-    ],
-    "type": [
-      "",
-      "hour"
-    ]
+    "low": [0, 0, 9, 0],
+    "high": [0, 0, 7, 0],
+    "type": ["", "hour"]
   },
   "Act5": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      20,
-      0,
-      9,
-      0
-    ],
-    "high": [
-      40,
-      0,
-      7,
-      0
-    ],
-    "type": [
-      "Temperature",
-      "hour"
-    ]
+    "low": [20, 0, 9, 0],
+    "high": [40, 0, 7, 0],
+    "type": ["Temperature", "hour"]
   },
   "Act6": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      0,
-      0,
-      0,
-      50
-    ],
-    "high": [
-      0,
-      0,
-      0,
-      1
-    ],
-    "type": [
-      "",
-      "minute"
-    ]
+    "low": [0, 0, 0, 50],
+    "high": [0, 0, 0, 1],
+    "type": ["", "minute"]
   },
   "Act7": {
     "actif": false,
     "inverted": false,
     "temporal": false,
-    "low": [
-      20,
-      0,
-      0,
-      50
-    ],
-    "high": [
-      40,
-      0,
-      0,
-      1
-    ],
-    "type": [
-      "Temperature",
-      "minute"
-    ]
+    "low": [20, 0, 0, 50],
+    "high": [40, 0, 0, 1],
+    "type": ["Temperature", "minute"]
   }
 }
