Work on ESP32 port
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/examples/WeatherStation/data/coolBoardSensorsConfig.json
+++ b/examples/WeatherStation/data/coolBoardSensorsConfig.json
@@ -10,6 +10,6 @@
     "uv": true
   },
   "vbat": true,
-  "soilMoisture": true,
-  "wallMoisture": false
+  "soilMoisture": false,
+  "wallMoisture": true
 }
