--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,6 @@ src_dir = examples/WeatherStation/
 lib_dir = src/
 
 [common]
-board = coolboard
-framework = arduino
-platform = espressif8266@1.7.0
 lib_deps =
   ArduinoJson@5.13.1
   NeoPixelBus@2.2.9
@@ -25,40 +22,63 @@ lib_deps =
   OneWire@2.3.4
   https://github.com/cyberp/DS1337
   https://github.com/practicalarduino/SHT1x
-build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY"
+build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\'
 
-[env:minified]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
+[coolboard]
+board = coolboard
+framework = arduino
+platform = espressif8266@1.7.0
+build_flags = ${common.build_flags} -Tesp8266.flash.4m2m.ldi -DVTABLES_IN_FLASH
+  -DPIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_WARN
 
-[env:prod]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
+[coolboardpro]
+board = esp32thing
+framework = arduino
+platform = espressif32
 build_flags = ${common.build_flags}
+lib_deps = 
+  https://github.com/suculent/esp32-http-update
+  ${common.lib_deps}
 
-[env:heap]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
+[env:coolboardpro_debug]
+board = ${coolboardpro.board}
+framework = ${coolboardpro.framework}
+platform = ${coolboardpro.platform}
 lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_HEAP_TRACE
+build_flags = ${coolboardpro.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
 
-[env:debug]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+[env:coolboard_minified]
+board = ${coolboard.board}
+framework = ${coolboard.framework}
+platform = ${coolboard.platform}
+lib_deps = ${coolboard.lib_deps}
+build_flags = ${coolboard.build_flags} -DCOOL_LEVEL=COOL_WARN
 
-[env:trace]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+[env:coolboard_prod]
+board = ${coolboard.board}
+framework = ${coolboard.framework}
+platform = ${coolboard.platform}
+lib_deps = ${coolboard.lib_deps}
+build_flags = ${coolboard.build_flags}
+
+[env:coolboard_heap]
+board = ${coolboard.board}
+framework = ${coolboard.framework}
+platform = ${coolboard.platform}
+lib_deps = ${coolboard.lib_deps}
+build_flags = ${coolboard.build_flags} -DCOOL_HEAP_TRACE
+
+[env:coolboard_debug]
+board = ${coolboard.board}
+framework = ${coolboard.framework}
+platform = ${coolboard.platform}
+lib_deps = ${coolboard.lib_deps}
+build_flags = ${coolboard.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+
+[env:coolboard_trace]
+board = ${coolboard.board}
+framework = ${coolboard.framework}
+platform = ${coolboard.platform}
+lib_deps = ${coolboard.lib_deps}
+build_flags = ${coolboard.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
