--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,10 @@
 [platformio]
 data_dir = examples/WeatherStation/data
 src_dir = examples/WeatherStation/
-lib_dir = src/
+monitor_baud = 115200
 
-[common]
+[cool]
+lib_dir = src/
 board = coolboard
 framework = arduino
 platform = espressif8266@1.7.0
@@ -28,41 +29,86 @@ lib_deps =
   https://github.com/uChip/MCP342X.git
   https://github.com/knolleary/pubsubclient
   https://github.com/simon-lacool/I2CSoilMoistureSensor.git
-  
-build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' "-Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096"
+
+[esp32]
+lib_dir = src/
+board = coolboard32
+framework = arduino
+platform = espressif32
+lib_deps =
+  ArduinoJson@5.13.1
+  NeoPixelBus@2.2.9
+  SparkFun BME280@1.2.0
+  DallasTemperature@3.8.0
+  OneWire@2.3.4
+  https://github.com/cyberp/DS1337
+  https://github.com/practicalarduino/SHT1x
+  https://github.com/uChip/MCP342X.git
+  https://github.com/knolleary/pubsubclient
+  https://github.com/simon-lacool/I2CSoilMoistureSensor.git
+  https://github.com/suculent/esp32-http-update
 
 [env:minified]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_WARN
+lib_extra_dirs = ${cool.lib_dir}
+board = ${cool.board}
+framework = ${cool.framework}
+platform = ${cool.platform}
+lib_deps = ${cool.lib_deps}
+build_flags = ${build_flags} -DCOOL_LEVEL=COOL_WARN
 
 [env:prod]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags}
+lib_extra_dirs = ${cool.lib_dir}
+board = ${cool.board}
+framework = ${cool.framework}
+platform = ${cool.platform}
+lib_deps = ${cool.lib_deps}
+build_flags = ${build_flags}
 
 [env:heap]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_HEAP_TRACE
+lib_extra_dirs = ${cool.lib_dir}
+board = ${cool.board}
+framework = ${cool.framework}
+platform = ${cool.platform}
+lib_deps = ${cool.lib_deps}
+build_flags = ${build_flags} -DCOOL_HEAP_TRACE
 
 [env:debug]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+lib_extra_dirs = ${cool.lib_dir}
+board = ${cool.board}
+framework = ${cool.framework}
+platform = ${cool.platform}
+lib_deps = ${cool.lib_deps}
+build_flags = -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
+ -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096 -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
 
 [env:trace]
-board = ${common.board}
-framework = ${common.framework}
-platform = ${common.platform}
-lib_deps = ${common.lib_deps}
-build_flags = ${common.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+lib_extra_dirs = ${cool.lib_dir}
+board = ${cool.board}
+framework = ${cool.framework}
+platform = ${cool.platform}
+lib_deps = ${cool.lib_deps}
+build_flags = ${build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+
+[env:minified32]
+lib_extra_dirs = ${esp32.lib_dir}
+board = ${esp32.board}
+framework = ${esp32.framework}
+platform = ${esp32.platform}
+lib_deps = ${esp32.lib_deps}
+build_flags = ${esp32.build_flags} -DCOOL_LEVEL=COOL_WARN
+
+[env:debug32]
+lib_extra_dirs = ${esp32.lib_dir}
+board = ${esp32.board}
+framework = ${esp32.framework}
+platform = ${esp32.platform}
+lib_deps = ${esp32.lib_deps}
+build_flags =  -DMQTT_MAX_PACKET_SIZE=4096 -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+
+[env:trace32]
+lib_extra_dirs = ${esp32.lib_dir}
+board = ${esp32.board}
+framework = ${esp32.framework}
+platform = ${esp32.platform}
+lib_deps = ${esp32.lib_deps}
+build_flags =  -DMQTT_MAX_PACKET_SIZE=4096 -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
