--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,8 @@ lib_deps =
   https://github.com/uChip/MCP342X.git
   https://github.com/knolleary/pubsubclient
   https://github.com/simon-lacool/I2CSoilMoistureSensor.git
+build_flags= !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
+ -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096
 
 [esp32]
 lib_dir = src/
@@ -47,6 +49,7 @@ lib_deps =
   https://github.com/knolleary/pubsubclient
   https://github.com/simon-lacool/I2CSoilMoistureSensor.git
   https://github.com/suculent/esp32-http-update
+build_flags= !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -DMQTT_MAX_PACKET_SIZE=4096
 
 [env:minified]
 lib_extra_dirs = ${cool.lib_dir}
@@ -54,7 +57,7 @@ board = ${cool.board}
 framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
-build_flags = ${build_flags} -DCOOL_LEVEL=COOL_WARN
+build_flags = ${cool.build_flags} -DCOOL_LEVEL=COOL_WARN
 
 [env:prod]
 lib_extra_dirs = ${cool.lib_dir}
@@ -62,7 +65,7 @@ board = ${cool.board}
 framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
-build_flags = ${build_flags}
+build_flags = ${cool.build_flags}
 
 [env:heap]
 lib_extra_dirs = ${cool.lib_dir}
@@ -70,7 +73,7 @@ board = ${cool.board}
 framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
-build_flags = ${build_flags} -DCOOL_HEAP_TRACE
+build_flags = ${cool.build_flags} -DCOOL_HEAP_TRACE
 
 [env:debug]
 lib_extra_dirs = ${cool.lib_dir}
@@ -78,8 +81,7 @@ board = ${cool.board}
 framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
-build_flags = -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
- -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096 -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+build_flags = ${cool.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
 
 [env:trace]
 lib_extra_dirs = ${cool.lib_dir}
@@ -87,7 +89,7 @@ board = ${cool.board}
 framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
-build_flags = ${build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+build_flags = ${cool.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
 
 [env:minified32]
 lib_extra_dirs = ${esp32.lib_dir}
@@ -103,7 +105,7 @@ board = ${esp32.board}
 framework = ${esp32.framework}
 platform = ${esp32.platform}
 lib_deps = ${esp32.lib_deps}
-build_flags =  -DMQTT_MAX_PACKET_SIZE=4096 -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+build_flags = ${esp32.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
 
 [env:trace32]
 lib_extra_dirs = ${esp32.lib_dir}
@@ -111,4 +113,4 @@ board = ${esp32.board}
 framework = ${esp32.framework}
 platform = ${esp32.platform}
 lib_deps = ${esp32.lib_deps}
-build_flags =  -DMQTT_MAX_PACKET_SIZE=4096 -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+build_flags = ${esp32.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
