--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ lib_deps =
   https://github.com/uChip/MCP342X.git
   https://github.com/knolleary/pubsubclient
   https://github.com/simon-lacool/I2CSoilMoistureSensor.git
+lib_ignore = ESP32httpUpdate
 build_flags= !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
  -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096
 
@@ -49,6 +50,9 @@ lib_deps =
   https://github.com/knolleary/pubsubclient
   https://github.com/simon-lacool/I2CSoilMoistureSensor.git
   https://github.com/suculent/esp32-http-update
+  https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+  https://github.com/adafruit/Adafruit-PWM-Servo-Driver-Library
+
 build_flags= !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -DMQTT_MAX_PACKET_SIZE=4096
 
 [env:minified]
@@ -58,6 +62,7 @@ framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
 build_flags = ${cool.build_flags} -DCOOL_LEVEL=COOL_WARN
+lib_ignore = ${cool.lib_ignore}
 
 [env:prod]
 lib_extra_dirs = ${cool.lib_dir}
@@ -66,6 +71,7 @@ framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
 build_flags = ${cool.build_flags}
+lib_ignore = ${cool.lib_ignore}
 
 [env:heap]
 lib_extra_dirs = ${cool.lib_dir}
@@ -74,6 +80,7 @@ framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
 build_flags = ${cool.build_flags} -DCOOL_HEAP_TRACE
+lib_ignore = ${cool.lib_ignore}
 
 [env:debug]
 lib_extra_dirs = ${cool.lib_dir}
@@ -82,6 +89,7 @@ framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
 build_flags = ${cool.build_flags} -DCOOL_LEVEL=COOL_DEBUG -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+lib_ignore = ${cool.lib_ignore}
 
 [env:trace]
 lib_extra_dirs = ${cool.lib_dir}
@@ -90,6 +98,7 @@ framework = ${cool.framework}
 platform = ${cool.platform}
 lib_deps = ${cool.lib_deps}
 build_flags = ${cool.build_flags} -DCOOL_LEVEL=COOL_TRACE -DCOOL_FUNC_TRACE -DCOOL_HEAP_TRACE -DCOOL_TIMESTAMP_TRACE
+lib_ignore = ${cool.lib_ignore}
 
 [env:minified32]
 lib_extra_dirs = ${esp32.lib_dir}
