--- a/platformio.ini
+++ b/platformio.ini
@@ -13,47 +13,41 @@ data_dir = examples/WeatherStation/data
 src_dir = examples/WeatherStation/
 monitor_baud = 115200
 
+[common]
+lib_deps =
+  ArduinoJson@5.13.1
+  NeoPixelBus@2.2.9
+  SparkFun BME280@1.2.0
+  DallasTemperature@3.8.0
+  OneWire@2.3.4
+  https://github.com/simon-lacool/I2CSoilMoistureSensor.git
+  https://github.com/cyberp/DS1337
+  https://github.com/practicalarduino/SHT1x
+  https://github.com/uChip/MCP342X.git
+  https://github.com/LaCoolCo/pubsubclient
+  https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+  https://github.com/adafruit/Adafruit-PWM-Servo-Driver-Library
+build_flags = !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -DMQTT_MAX_PACKET_SIZE=4096
+
 [cool]
-lib_dir = src/
 board = coolboard
 framework = arduino
 platform = espressif8266@1.7.0
 lib_deps =
-  ArduinoJson@5.13.1
-  NeoPixelBus@2.2.9
-  SparkFun BME280@1.2.0
-  DallasTemperature@3.8.0
-  OneWire@2.3.4
-  https://github.com/cyberp/DS1337
-  https://github.com/practicalarduino/SHT1x
-  https://github.com/uChip/MCP342X.git
-  https://github.com/knolleary/pubsubclient
-  https://github.com/simon-lacool/I2CSoilMoistureSensor.git
+  ${common.lib_deps}
 lib_ignore = ESP32httpUpdate
-build_flags= !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH
- -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096
+build_flags= ${common.build_flags} -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096
+lib_dir = src/
 
 [esp32]
-lib_dir = src/
 board = coolboard32
 framework = arduino
 platform = espressif32
 lib_deps =
-  ArduinoJson@5.13.1
-  NeoPixelBus@2.2.9
-  SparkFun BME280@1.2.0
-  DallasTemperature@3.8.0
-  OneWire@2.3.4
-  https://github.com/cyberp/DS1337
-  https://github.com/practicalarduino/SHT1x
-  https://github.com/uChip/MCP342X.git
-  https://github.com/knolleary/pubsubclient
-  https://github.com/simon-lacool/I2CSoilMoistureSensor.git
   https://github.com/suculent/esp32-http-update
-  https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
-  https://github.com/adafruit/Adafruit-PWM-Servo-Driver-Library
-
-build_flags= !echo "-DCOOL_FW_VERSION="\'\"$(git describe --tags --always)\"\' -DMQTT_MAX_PACKET_SIZE=4096
+  ${common.lib_deps}
+build_flags = ${common.build_flags}
+lib_dir = src/
 
 [env:minified]
 lib_extra_dirs = ${cool.lib_dir}
