--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,7 @@ platform = espressif8266@1.7.0
 lib_deps =
   ${common.lib_deps}
 lib_ignore = ESP32httpUpdate
-build_flags= ${common.build_flags} -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY -DMQTT_MAX_PACKET_SIZE=4096
+build_flags= ${common.build_flags} -Wl,-Tesp8266.flash.4m2m.ld -DVTABLES_IN_FLASH -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_dir = src/
 
 [esp32]
