--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+**/data/*.key
 **/data/certificate.bin
 **/data/privateKey.bin
 /examples/**/*.cpp
