Try PWM fade animation in FreeRTOS task
Signed-off-by: Erwan Queffélec <erwan.queffelec@gmail.com>

--- a/examples/Colas/data/coolBoardConfig.json
+++ b/examples/Colas/data/coolBoardConfig.json
@@ -1,9 +1,9 @@
 {
-  "logInterval": 3600,
+  "logInterval": 5,
   "ireneActive": false,
   "jetpackActive": false,
-  "externalSensorsActive": false,
-  "sleepActive": true,
+  "externalSensorsActive": true,
+  "sleepActive": false,
   "manual": false,
   "mqttServer": "mqtts.lacoolboard.io"
 }
