--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-data_dir = examples/WeatherStation/data
-src_dir = examples/WeatherStation/
+data_dir = examples/Colas/data
+src_dir = examples/Colas/
 monitor_baud = 115200
 
 [common]
@@ -42,7 +42,7 @@ lib_dir = src/
 [esp32]
 board = coolboard32
 framework = arduino
-platform = espressif32
+platform = https://github.com/platformio/platform-espressif32.git
 lib_deps =
   https://github.com/suculent/esp32-http-update
   ${common.lib_deps}
